assets/style.css
#max {
    max-width: 1300px;
    margin: 0 auto;
}

body {
    background-color: lightgoldenrodyellow;
    font-weight: bold;
}

/* styling for the header */
header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: lightblue;
    align-items: end;
    margin: 0px auto;
    position: static;
}

h1 {
    border-bottom: 4px solid lightsalmon;
}

ul {
    display: flex;
    margin-bottom: 25px;

}



ul li {

    list-style-type: none;
    margin-right: 10px;
    border-bottom: 2px solid lightsalmon;

}


figure {
    display: flex;
    flex-direction: column;
}

.plain {
    text-decoration: none;
}

.beach {
    background-image: url(./portfolio-image.png);
    width: 100%;
    height: 200px;
    background-size: cover;
    background-position: center;
    margin: 0 auto;
    z-index: 1;

}

.portrait {
    display: inline;
    margin: 0px;
    border-radius: 100%;

    position: relative;
    top: 20px;
    left: 75%;

}

.slogan {
    background-color: white;
    margin: 0px;
    opacity: .8;
    display: inline;
    position: relative;
    top: 20px;

    font-weight: 900;
    padding: 5px 5px 5px 10px;

}

/* styling for the boxes in the grid */

.contentCard {
    display: flex;
    border: 4px solid lightblue;
    position: relative;

}

.card {
    border-bottom: 4px solid lightsalmon;
}

/* salmon squares for work title */
.cardTitle {
    display: flex;
    align-items: center;
    position: absolute;
    height: 70px;
    width: 100px;
    z-index: 1;
    background-color: lightsalmon;
    bottom: 0;
}


/* cheatSheet card styling */
.cheatSheet {
    background-image: url(./vecteezy_traditional-japanese-wave-pattern-vector-abstract-hand_18861519.jpg);
    background-size: cover;
    background-position: center;

}

#cheatSheet {
    height: 100%;
    width: 100%;

    z-index: 2;


}

/* data card styling */
.data {
    background-image: url(./beach-01.jpg);
    background-size: cover;
    background-position: center;

}

#data {
    height: 100%;
    width: 100%;

    z-index: 2;


}

/* pre-work card styling */
.preWork {
    background-image: url(./vecteezy_campaign-sketch-doodle-set-backdrop-drawing-pattern-texture_.jpg);
}

.aboutMeTitle,
.work,
.contactMe {
    text-align: right;
    border: none;
    border-right: 4px solid lightsalmon;
    padding-right: 5px;
}

/* added some hover effects were an opaque film greys out work tiles till hovered over */


/* formate for the grid */

.aboutMeTitle {
    grid-area: aboutMeTitle;
}

.aboutMe {
    grid-area: aboutMe;

}

.work {
    grid-area: work;
}

.cheatSheet {
    grid-area: cheatSheet;

}

.data {
    grid-area: data;

}

.preWork {
    grid-area: preWork;

}


.gitHub {
    grid-area: gitHub;
}

.phone {
    grid-area: phone;
}

.email {
    grid-area: email;
}

.contactMe {
    grid-area: contactMe;
}

.container {
    margin-top: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr 2fr 2fr;
    grid-template-rows: 1fr 1fr 1fr 2fr .25fr;
    grid-template-areas:
        "aboutMeTitle aboutMe aboutMe aboutMe"
        "work cheatSheet cheatSheet cheatSheet"
        "work cheatSheet cheatSheet cheatSheet"
        "work preWork data data"
        "contactMe phone email gitHub";
    gap: 20px 20px;
}

/* @media screen and (max-width: 800px) {
    .cardTitle {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        position: absolute;
        height: 70px;
        width: 60px;
        z-index: 1;
        font-size: 8px;
        background-color: lightsalmon;
        bottom: 0;
    }

} */



/* @media screen and (max-width: 992px) {
    body{
        background-color: lightgreen;
    }
} */

@media screen and (max-width: 768px) {
    .max{
        width: 100%;
    }
    body{
        /* background-color: crimson; */
        
    }
    .container{
        display: grid;
        grid-template-rows: .25fr 1fr .25fr 1fr 1fr 1fr .25fr .25fr;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-areas:
            "aboutMeTitle aboutMeTitle aboutMeTitle"
            "aboutMe aboutMe aboutMe"
            "work work work"
            "cheatSheet cheatSheet cheatSheet"
            "data data data"
            "preWork preWork preWork"
            "contactMe contactMe contactMe"
            "phone email gitHub"
            ;
        .aboutMeTitle,
        .work,
        .contactMe {
            text-align: left;
            border: none;
            border-bottom: 4px dashed lightsalmon;
            padding-right: 5px;
        }
        
    }
    .portrait {
        display: inline-block;
        margin: 0px;
        border-radius: 100%;
    
        position: relative;
        top: 20px;
        left: 10%;
    
    }

    /* add transition */
    .slogan{
        left: 10%
    }
}

